tests/miniJava/pos/001290_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( 0 [ 0 ] ) java = 0 ; } }
