tests/miniJava/neg/004805_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( ) length { return 0 ; } }
